UC9: Group Bogies by Type (Collectors.groupingBy)